--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/preact": "^3.5.0",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/rss": "^4.0.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.3",
     "preact": "^10.22.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
   }
 }
